# xsel

./: AUTHORS  COPYING  ChangeLog  INSTALL.md  Imakefile  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.h.in  configure  configure.ac  rant.txt  xsel.1x  xsel.c  xsel.h
.github/workflows/: c-cpp.yml
release_notes/: xsel-1.0.0.txt  xsel-1.1.0.txt  xsel-1.2.0.txt
